// Open Ingredient — DBML Schema
// Docs: https://dbml.dbdiagram.io/docs

Table units {
  id       integer      [primary key]
  name_th  varchar(255)
  name_en  varchar(255)
}

Table categories {
  id        integer      [primary key]
  name_th   varchar(255)
  name_en   varchar(255)
  parent_id integer      [ref: > categories.id, note: "null = root"]
}

Table processes {
  id       integer      [primary key]
  name_th  varchar(255) [note: "ต้ม, ผัด, นึ่ง"]
  name_en  varchar(255)
}

Table flavors {
  id       integer      [primary key]
  name_th  varchar(255) [note: "หวาน, เค็ม, เผ็ด"]
  name_en  varchar(255)
}

Table nutrients {
  id        integer      [primary key]
  name_th   varchar(255)
  name_en   varchar(255)
  type      varchar
  parent_id integer      [ref: > nutrients.id, note: "null = root"]
}

Table brands {
  id          integer      [primary key, increment]
  name_th     varchar(255)
  name_en     varchar(255)
  logo_url    varchar
  website_url varchar
}

Table foods {
  id           integer      [primary key]
  name_th      varchar(255)
  name_en      varchar(255)
  category_id  integer      [ref: > categories.id]
  brand_id     integer      [ref: > brands.id, note: "null = generic / unbranded"]
  weight       float        [note: "serving size (optional สำหรับ raw food)"]
  weight_unit  integer      [ref: > units.id]
  energy       float
  energy_unit  integer      [ref: > units.id]
  is_recipe    boolean      [default: false, note: "flag ว่าเป็นสูตรอาหาร"]
  source       varchar      [note: "e.g. thaifcd"]
  source_id    varchar      [note: "original id from source, e.g. 01005"]
}

Table food_ingredients {
  food_id        integer  [ref: > foods.id, note: "recipe"]
  ingredient_id  integer  [ref: > foods.id, note: "component"]
  amount         float
  unit_id        integer  [ref: > units.id]

  indexes {
    (food_id, ingredient_id) [pk]
  }
}

Table food_processes {
  food_id    integer  [ref: > foods.id]
  process_id integer  [ref: > processes.id]

  indexes {
    (food_id, process_id) [pk]
  }
}

Table food_flavors {
  food_id   integer  [ref: > foods.id]
  flavor_id integer  [ref: > flavors.id]
  level     integer

  indexes {
    (food_id, flavor_id) [pk]
  }
}

Table food_nutrients {
  food_id     integer  [ref: > foods.id]
  nutrient_id integer  [ref: > nutrients.id]
  amount      float
  unit_id     integer  [ref: > units.id]
  operator    varchar  [note: "<, ~, >"]

  indexes {
    (food_id, nutrient_id) [pk]
  }
}

Table users {
  id         integer      [primary key, increment]
  email      varchar(255) [unique, not null]
  name       varchar(255)
  created_at timestamp    [default: `now()`]
}

Table user_meals {
  id         integer   [primary key, increment]
  user_id    integer   [ref: > users.id, not null]
  eaten_at   timestamp [not null, note: "datetime of the meal"]
  meal_type  varchar   [not null, note: "breakfast, lunch, dinner, snack"]
  is_buffet  boolean   [default: false, note: "true = buffet, multiple rounds allowed"]
  note       varchar

  indexes {
    (user_id, eaten_at)
  }
}

Table user_meal_foods {
  id        integer [primary key, increment]
  meal_id   integer [ref: > user_meals.id, not null]
  food_id   integer [ref: > foods.id, not null]
  weight_g  float   [note: "grams per serving; null if unknown (e.g. soup)"]
  volume_ml float   [note: "ml for liquids; null if not applicable"]
  qty       integer [not null, default: 1, note: "number of servings/plates"]
  note      varchar

  indexes {
    (meal_id, food_id) [unique]
  }
}
